@@ -1,4 +1,5 @@
 0.16.10
+ - enh: improve download job list initialization
  - docs: consistently rename API key to API token (code unchanged)
 0.16.9
  - enh: don't use global `logging.basicConfig`
